@@ -58,17 +58,23 @@ cong_editor_area_text_construct (CongEditorAreaText *area_text,
 				 CongEditorWidget3 *editor_widget,
 				 CongFont *font,
 				 const GdkColor *fg_col,
-				 const gchar *text);
+				 const gchar *text,
+				 gboolean use_markup);
 
 CongEditorArea*
 cong_editor_area_text_new (CongEditorWidget3 *editor_widget,
 			   CongFont *font,
 			   const GdkColor *fg_col,
-			   const gchar *text);
+			   const gchar *text,
+			   gboolean use_markup);
 
 void
 cong_editor_area_text_set_text (CongEditorAreaText *area_text,
 				const gchar *text);
+
+void
+cong_editor_area_text_set_markup (CongEditorAreaText *area_text,
+				  const gchar *markup);
 
 G_END_DECLS
 
