@@ -100,7 +100,8 @@ generate_area (CongEditorNode *editor_node)
 	new_area = cong_editor_area_text_new (cong_editor_node_get_widget (editor_node),
 					      cong_app_singleton()->fonts[CONG_FONT_ROLE_TITLE_TEXT],
 					      NULL,
-					      PRIVATE(editor_node_unimplemented)->description);
+					      PRIVATE(editor_node_unimplemented)->description,
+					      FALSE);
 
 	return new_area;
 }
